Fixing less imports

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,16 +1,16 @@
-@import './globals.less';
-@import './layout.less';
+@import './globals';
+@import './layout';
 
-@import './components/map.less';
-@import './components/header.less';
-@import './components/gallery.less';
-@import './components/location-item-edit-view.less';
-@import './components/location-item-full-view.less';
-@import './components/location-item-submission-view.less';
-@import './components/gallery.less';
+@import './components/map';
+@import './components/header';
+@import './components/gallery';
+@import './components/location-item-edit-view';
+@import './components/location-item-full-view';
+@import './components/location-item-submission-view';
+@import './components/gallery';
 
-@import './components/ui/buttons.less';
-@import './components/ui/form.less';
+@import './components/ui/buttons';
+@import './components/ui/form';
 
 html,
 body {
