Refactored variables import to fix LESS compiler

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,5 +1,4 @@
-@import './globals';
-@import './layout';
+@import '_layout';
 
 @import './components/map';
 @import './components/header';
@@ -7,7 +6,6 @@
 @import './components/location-item-edit-view';
 @import './components/location-item-full-view';
 @import './components/location-item-submission-view';
-@import './components/gallery';
 
 @import './components/ui/buttons';
 @import './components/ui/form';
