--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -3,15 +3,13 @@
 .places__menu {
     height: 52px;
     background-color: @background-color-primary;
-    background-image: @background-image-primary;
 }
 
 .places__gallery,
 .location-item-full-view,
 .location-item-submission-view,
 .location-item-edit-view {
-    background-color: @background-color-primary;
-    background-image: @background-image-primary;
+    background-color: #efefef;
     z-index: @z-index-gallery;
 }
 
