--- a/src/styles/components/location-item-full-view.less
+++ b/src/styles/components/location-item-full-view.less
@@ -1,4 +1,5 @@
 @import '../globals.less';
+@import '../components/ui/buttons.less';
 
 .location-item-full-view {
     > div {
@@ -10,6 +11,15 @@
     }
 }
 
+.location-item-full-view__close {
+    .button--close();
+}
+
+.button__location-item-full-view__submit {
+    .button--main();
+}
+
+
 .location-item-full-view__footer {
     display: flex;
     flex-wrap: wrap;
@@ -18,7 +28,7 @@
     .location-item-full-view__hours {
         display: flex;
         flex-basis: 100%;
-        margin-bottom: 10px;
+        margin: 10px 0;
 
         .location-item-full-view__hour-separator {
             padding: 0 5px;
