--- a/src/styles/components/location-item-full-view.less
+++ b/src/styles/components/location-item-full-view.less
@@ -36,10 +36,11 @@
     }
 
     .location-item-full-view__keywords {
-        min-height: 50px;
+        display: flex;
 
         .location-item-full-view__keyword {
             background: rgba(255, 255, 255, 0.5);
+            margin-right: 8px;
             border-radius: 3px;
             padding: 5px;
             font-size: @font-size-small;
