--- a/src/styles/components/gallery.less
+++ b/src/styles/components/gallery.less
@@ -68,6 +68,7 @@
 .gallery__locations-list {
     overflow-y: auto;
     overflow-x: none;
+    height: calc(100vh - 188px);
 
     .gallery__location-item {
         border-bottom: 2px solid @border-color;
