--- a/src/styles/components/location-item-full-view.less
+++ b/src/styles/components/location-item-full-view.less
@@ -24,6 +24,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-bottom: 10px;
 
     .location-item-full-view__hours {
         display: flex;
@@ -44,6 +45,20 @@
             border-radius: 3px;
             padding: 5px;
             font-size: @font-size-small;
+        }
+    }
+
+    .location-item-full-view__favourite {
+        &[data-favourite="true"] {
+            color: @color-success;
+
+            &:hover {
+                color: black;
+            }
+        }
+
+        &:hover {
+            color: @color-success;
         }
     }
 }
