--- a/src/styles/components/ui/buttons.less
+++ b/src/styles/components/ui/buttons.less
@@ -4,11 +4,18 @@
     width: 100%;
     padding: 16px;
     font-size: @font-size-larger;
-    border: 1px solid black;
+    border: 0;
+    border-radius: 2px;
     text-align: center;
     background: @color-success;
     line-height: 0.9rem;
     color: white;
+
+    &:hover, &:active, &:focus {
+        outline: 0;
+        padding: 14px;
+        border: 2px solid #DB4B73;
+    }
 }
 
 .button--add {
@@ -40,11 +47,18 @@
     position: absolute;
     right: 12px;
     border: none;
+    top: 15px;
 
     &:focus,
     &:hover,
     &:active {
         border: none;
         outline: none;
+    }
+
+    @media screen and (min-width: @breakpoint-tablet) {
+        .button--close {
+            top: auto;
+        }
     }
 }
