--- a/src/styles/components/ui/buttons.less
+++ b/src/styles/components/ui/buttons.less
@@ -14,7 +14,7 @@
     &:hover, &:active, &:focus {
         outline: 0;
         padding: 14px;
-        border: 2px solid #DB4B73;
+        border: 2px solid @color-accent;
     }
 }
 
