--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -9,7 +9,7 @@
 .location-item-full-view,
 .location-item-submission-view,
 .location-item-edit-view {
-    background-color: #efefef;
+    background-color: @color-boring;
     z-index: @z-index-gallery;
 }
 
@@ -33,10 +33,10 @@
     display: block;
     position: absolute;
     height: calc(100vh - 52px);
-    transform: translateX(-280px);
+    transform: translateX(@sidebar-width-mobile-minus);
     transition: all 150ms ease-out;
     padding: 10px;
-    width: 280px;
+    width: @sidebar-width-mobile;
 
     &.location-item-full-view--open,
     &.location-item-submission-view--open,
@@ -52,15 +52,15 @@
         display: block;
         position: absolute;
         height: calc(100vh - 52px);
-        transform: translateX(-280px);
+        transform: translateX(@sidebar-width-mobile-minus);
         transition: all 150ms ease-out;
-        width: 280px;
+        width: @sidebar-width-mobile;
         //background: #fefefe;
 
         &.places__gallery--open {
             position: absolute;
             transform: translateX(0);
-            width: 280px;
+            width: @sidebar-width-mobile;
 
             ~ .places__map {
                 transform: translateX(280px);
@@ -72,7 +72,7 @@
     .location-item-full-view,
     .location-item-submission-view,
     .location-item-edit-view {
-        width: 280px;
+        width: @sidebar-width-mobile;
 
         &.location-item-full-view--open,
         &.location-item-submission-view--open,
@@ -94,7 +94,7 @@
     .places {
         height: 100%;
         display: grid;
-        grid-template-columns: 40vw repeat(3, 1fr);
+        grid-template-columns: @sidebar-width-tablet repeat(3, 1fr);
         grid-template-rows: 70px repeat(2, 100%);
         flex-wrap: wrap;
         grid-template-areas:
@@ -124,8 +124,8 @@
     .location-item-edit-view {
         top: 70px;
         height: calc(100vh - 70px);
-        transform: translateX(-40vw);
-        width: 40vw;
+        transform: translateX(@sidebar-width-tablet-minus);
+        width: @sidebar-width-tablet;
 
         &.location-item-full-view--open,
         &.location-item-submission-view--open,
@@ -138,7 +138,7 @@
 /* Desktops */
 @media screen and (min-width: @breakpoint-desktop) {
     .places {
-        grid-template-columns: 29vw repeat(3, 1fr);
+        grid-template-columns: @sidebar-width-desktop repeat(3, 1fr);
     }
 
     .location-item-full-view,
@@ -146,8 +146,8 @@
     .location-item-edit-view {
         top: 70px;
         height: calc(100vh - 70px);
-        width: 29vw;
-        transform: translateX(-29vw);
+        width: @sidebar-width-desktop;
+        transform: translateX(@sidebar-width-desktop-minus);
 
         &.location-item-full-view--open,
         &.location-item-submission-view--open,
