--- a/src/styles/components/location-item-submission-view.less
+++ b/src/styles/components/location-item-submission-view.less
@@ -6,8 +6,9 @@
         margin-top: -5px;
     }
 
-    input, textarea {
-        width: 100%;
+    input, textarea { 
+        max-width: 100%;
+        min-width: 100%;
         margin-bottom: 16px;
     }
 
