--- a/src/styles/globals.less
+++ b/src/styles/globals.less
@@ -28,7 +28,7 @@
 @color-success: #089637;
 @color-warning: #DB7F00;
 @color-complimentary: #0CB7DB;
-//4285f4 deed8d
+@color-boring: #efefef;
 
 //Background
 @background-color-primary: #DB4B73;
