Added generic headings and form styling

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,14 +1,14 @@
 @import './layout';
 
+@import './components/ui/headings';
+@import './components/ui/forms';
+
 @import './components/map';
 @import './components/header';
 @import './components/gallery';
 @import './components/location-item-edit-view';
 @import './components/location-item-full-view';
 @import './components/location-item-submission-view';
-
-@import './components/ui/buttons';
-@import './components/ui/form';
 
 html,
 body {
