Improved CSS for favourite button.

--- a/src/styles/components/gallery.less
+++ b/src/styles/components/gallery.less
@@ -100,16 +100,6 @@
     }
 
     .gallery__location-item-favourite {
-        &[data-favourite="true"] {
-            color: @color-success;
-
-            &:hover {
-                color: black;
-            }
-        }
-
-        &:hover {
-            color: @color-success;
-        }
+        .button--favourite();
     }
 }
