--- a/src/styles/components/location-item-full-view.less
+++ b/src/styles/components/location-item-full-view.less
@@ -39,17 +39,7 @@
         }
     
         .location-item-full-view__favourite {
-            &[data-favourite="true"] {
-                color: @color-success;
-    
-                &:hover {
-                    color: black;
-                }
-            }
-    
-            &:hover {
-                color: @color-success;
-            }
+            .button--favourite();
         }
     }
 }
