--- a/src/styles/components/ui/forms.less
+++ b/src/styles/components/ui/forms.less
@@ -10,3 +10,17 @@ input, textarea {
         border-color: @input-color-focus;
     }
 }
+
+.button--favourite {
+    &[data-favourite="true"] {
+        color: @color-success;
+
+        &:hover {
+            color: black;
+        }
+    }
+
+    &:hover {
+        color: @color-success;
+    }
+}
