Fixed less imports for common ui components

--- a/src/styles/components/ui/buttons.less
+++ b/src/styles/components/ui/buttons.less
@@ -40,6 +40,20 @@
     }
 }
 
+.button--favourite {
+    &[data-favourite="true"] {
+        color: @color-success;
+
+        &:hover {
+            color: black;
+        }
+    }
+
+    &:hover {
+        color: @color-success;
+    }
+}
+
 .button--close {
     background-color: transparent;
     width: 30px;
