Fixing Chrome mobile bug for search input

--- a/src/styles/components/gallery.less
+++ b/src/styles/components/gallery.less
@@ -8,6 +8,7 @@
     .gallery__search-wrapper {
         display: flex;
         flex: 1;
+        max-width: 100%;
 
         .gallery__search-query {
             flex-grow: 1;
