Added only open now filter, styles for search filters

--- a/src/styles/components/gallery.less
+++ b/src/styles/components/gallery.less
@@ -65,6 +65,11 @@
         &:last-of-type {
             margin-left: 0;
         }
+
+        &.gallery_search-only-open--selected,
+        &.gallery_search-only-favourites--selected {
+            background: @color-success;
+        }
     }
 }
 
