--- a/src/styles/components/location-item-full-view.less
+++ b/src/styles/components/location-item-full-view.less
@@ -28,6 +28,7 @@
     
         .location-item-full-view__keywords {
             display: flex;
+            margin-bottom: 8px;
     
             .location-item-full-view__keyword {
                 background: rgba(255, 255, 255, 0.5);
