--- a/src/styles/components/ui/forms.less
+++ b/src/styles/components/ui/forms.less
@@ -10,3 +10,9 @@ input, textarea {
         border-color: @input-color-focus;
     }
 }
+
+.input-form {
+    max-width: 100%;
+    min-width: 100%;
+    margin-bottom: 16px;
+}
