Fixed build due to less errors

--- a/src/styles/components/location-item-submission-view.less
+++ b/src/styles/components/location-item-submission-view.less
@@ -1,5 +1,6 @@
 @import '../globals.less';
 @import '../components/ui/buttons.less';
+@import '../components/ui/forms.less';
 
 .location-item-submission-view {
     input, textarea { 
