--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -14,6 +14,7 @@ html,
 body {
     overflow-y: hidden;
     height: 100vh;
+    height: -webkit-fill-available;
     max-width: 100%;
     font-size: @font-size-base;
     line-height: @font-size-base-line-height;
